-------------------------------------------------------------------------------
This file is used to record changes made to the CVS database. Please add to
the top of this file before committing any changes. Please use the header
format provided for each entry, noting that the text on each line should not
be longer than the lines of dashes.

Riley
-------------------------------------------------------------------------------

Sat Oct  6 20:07:05 BST 2001	Riley Williams <rhw@MemAlpha.cx>

	* Actually committed changes listed below !!!!!!!

Wed Sep 19 23:22:38 BST 2001	Riley Williams <rhw@MemAlpha.cx>

	* Added facility to automatically compile all utilities in ELKSnet
	  package my doing `make all` in the base directory.
	* Added v2.0a of screen utility to ELKSnet package, although it
	  still needs tweaking for ELKS at this stage.

-------------------------------------------------------------------------------
END OF CHANGELOG