@@ -5,8 +5,18 @@
 
 all:
 	@for DIR in */ ; do \
-	    if [ "$$DIR" != "CVS/" ]; then \
+	    if [ -f "$$DIR"/Makefile ]; then \
 		make -C "$$DIR" all ;
+	    fi ; \
+	done
+
+###############################################################################
+# Clean everything up.
+
+clean:
+	@for DIR in */ ; do \
+	    if [ -f "$$DIR"/Makefile ]; then \
+		make -C "$$DIR" clean ;
 	    fi ; \
 	done
 
